Fix grandmaster title spacing

--- a/static/sass/_submasters.sass
+++ b/static/sass/_submasters.sass
@@ -65,3 +65,7 @@
 
 #grandmaster
     width: 98%
+
+#grandmasterTitle
+    margin: 0
+    margin-bottom: 0.25em
